--- a/html/Formulario.html
+++ b/html/Formulario.html
@@ -10,6 +10,13 @@
 
   <link rel="stylesheet" href="https://i.icomoon.io/public/temp/a8f4590560/UntitledProject/style.css">
   <style type="text/css">
+    .form-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
     .icon-enter:before {
       content: "\ea13";
     }
@@ -17,8 +24,8 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="col-sm-6 offset-sm-3 mt-5" style="margin-top:30px">
+  <div class="container form-container">
+    <div class="col-sm-6 mt-5" style="margin-top:30px">
       <div class="jumbotron">
         <div class="form-group" style="margin-top: -50px;">
           <h1 class="text-center">
@@ -32,14 +39,14 @@
             <span class="input-group-addon">
               <span class="glyphicon glyphicon-user"></span>
             </span>
-                <input type="text" class="form-control" name="nombre" placeholder="&#9000; Ingrese el nombre.." required>
+                <input type="text" class="form-control" name="nombre" placeholder="ψ Ingrese el nombre.." required>
           </div>
 
           <div class="form-group input-group">
             <span class="input-group-addon">
               <span class="glyphicon glyphicon-user"></span>
             </span>
-                  <input type="text" class="form-control" name="usuario" placeholder="&#9000; Ingrese el usuario.." required>
+                  <input type="text" class="form-control" name="usuario" placeholder=" ̶b Ingrese el usuario.." required>
           </div>
 
             <div class="form-group input-group">
@@ -53,7 +60,7 @@
               <span class="input-group-addon">
                 <span class="glyphicon glyphicon-lock"></span>
               </span>
-                <input type="password" class="form-control" name="password" placeholder="&#128272; Confirme la contraseña.." required>
+                <input type="password" class="form-control" name="password" placeholder="⌒ Confirme la contraseña.." required>
             </div>
 
             <hr>
@@ -82,7 +89,7 @@
             <div class="form-group">
               <label>
                   <input type="checkbox">
-                  Remember me
+                  Recuerdame
                 </label>
             </div>
               
