--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
                         <div class="collapse navbar-collapse" id="navbar-collapse-1">
                           <ul class="nav navbar-nav">
+                            <li><a href="#">Grupo 4</a></li>
                             <li><a href="#">Docente</a></li>
                             <li><a href="html/FormComandante.html" target="_blank">Comandante</a></li>
                             <li class="dropdown">
